2020-09-13  Zalan Bujtas  <zalan@apple.com>

        [LFC][IFC] Text run is at incorrect vertical position when parent inline box is stretched
        https://bugs.webkit.org/show_bug.cgi?id=216453

        Reviewed by Antti Koivisto.

        Text runs don't necessarily start at the top of the parent inline box. When the inline box is
        stretched by some other content (nested inline box or atomic inline-level box) the run is pushed down.
        This patch computes the correct vertical position by using the inline box's baseline (text always sits on the baseline).

        * layout/inlineformatting/InlineLineBox.cpp:
        (WebCore::Layout::LineBox::logicalRectForTextRun const):

2020-09-13  Zalan Bujtas  <zalan@apple.com>

        [LFC] Fix showLayoutTree to show anonymous inline boxes
        https://bugs.webkit.org/show_bug.cgi?id=215437

        Reviewed by Antti Koivisto.

        This patch also adds baseline and run content logging.  

        * layout/layouttree/LayoutTreeBuilder.cpp:
        (WebCore::Layout::outputLayoutBox):
        (WebCore::Layout::outputLayoutTree):

2020-09-13  Wenson Hsieh  <wenson_hsieh@apple.com>

        Add a key to the text manipulation userInfo dictionary indicating whether the translated item is on-screen
        https://bugs.webkit.org/show_bug.cgi?id=216452
        <rdar://problem/68785397>

        Reviewed by Darin Adler.

        For debugging purposes, and also to provide a hint as to what text should be prioritized when translating
        web pages, WebKit clients have requested a new field in the userInfo metadata dictionary associated with each
        token that indicates whether or not a translation (i.e. text manipulation) token represents an element that is
        currently on-screen. See below for more details.

        Test: TextManipulation.StartTextManipulationExtractsUserInfo

        * editing/TextManipulationController.cpp:
        (WebCore::tokenInfo):
